--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -37,7 +37,7 @@
                             </div>
                             <div class="col-sm-6">
                                 <input th:field="*{file}" type="file" class="form-control-file" id="fileUpload"
-                                       name="fileUpload">
+                                       name="fileUpload" required>
                             </div>
                             <div class="col-sm-4">
                                 <button type="submit" class="btn btn-dark">Upload</button>
