--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,6 +18,9 @@
                 <div th:if="${param.logout}" class="alert alert-dark">
                     You have been logged out
                 </div>
+                <div th:if="${successfullySignedUpMessage}" class="alert alert-success">
+                    <div th:text="${successfullySignedUpMessage}"></div>
+                </div>
                 <div class="form-group">
                     <label for="inputUsername">Username</label>
                     <input type="input" class="form-control" name="username" id="inputUsername" placeholder="Enter Username" maxlength="20" required>
