--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -22,7 +22,7 @@
                    aria-controls="nav-files" aria-selected="true">Files</a>
                 <a class="nav-item nav-link" id="nav-notes-tab" data-toggle="tab" href="#nav-notes" role="tab"
                    aria-controls="nav-notes" aria-selected="false">Notes</a>
-                <a class="nav-item nav-link" id="nav-credentials-tab" data-toggle="tab" href="#nav-credentials"
+                <a class="nav-item nav-link" id="nav-credentials-tab-btn" data-toggle="tab" href="#nav-credentials"
                    role="tab" aria-controls="nav-credentials" aria-selected="false">Credentials</a>
             </div>
         </nav>
